Deployments/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aws-ingress
  #namespace: argocd
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: angular-service
                port:
                  number: 80

          - path: /restaurant
            pathType: Prefix
            backend:
              service:
                name: restaurant-service
                port:
                  number: 9091

          - path: /foodcatalogue
            pathType: Prefix
            backend:
              service:
                name: foodcatalogue-service
                port:
                  number: 9093

          - path: /orderDetails
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 9094


          - path: /user
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 9092
